# ampy-bus

./: .gitignore  Makefile  README.md  go.mod  go.sum  otel-collector.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e-nats.yml  publish.yml
cmd/ampybusctl/: main.go
cmd/benchkafka/: main.go
cmd/benchnats/: main.go
cmd/kafkabusctl/: main.go
cmd/kafkainspect/: main.go
cmd/kafkapoison/: main.go
cmd/oneshot-sub/: main.go
dlq_dump/: 20250907T043124387172Z_0199226e-03d7-7134-b7d9-53b4d1310c94.json
examples/: README.md  bars_v1_XNAS_AAPL.json  control_v1_replay_request.json  dlq_v1_bars.json  envelope.schema.json  fills_v1_event.json  fx_v1_USD_JPY.json  metrics_v1_oms_order_rejects.json  news_v1_raw.json  orders_v1_request.json  positions_v1_snapshot.json  signals_v1_hyper_NVDA.json  ticks_v1_trade_MSFT.json
examples/go/nats_pubsub/: main.go
examples/go/replayer/: main.go
examples/go/simple_roundtrip/: main.go
golden/bars/: edge_pointer_v1_nvda.json  minimal_v1_msft.json  typical_v1_aapl.json
golden/fills/: fill_001.json
golden/fx/: usdjpy_001.json
golden/news/: raw_001.json
golden/orders/: req_001.json
golden/positions/: pos_001.json
golden/signals/: signal_001.json
pkg/ampybus/: codec.go  control.go  envelope.go  envelope_test.go  headers.go  partition.go  schemahash.go  schemahash_test.go  trace.go  validate.go
pkg/ampybus/natsbinding/: config.go  nats.go  traceparent.go
pkg/ampybus/obs/: metric.go  otel.go
pkg/ampybus/validate/: validate.go
pkg/fixture/: fixture.go
pkg/kafkabinding/: kafka.go
python/ampybus/: __init__.py
python/tests/: test_roundtrip.py
