[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampy-bus"
version = "0.1.0"
description = "Transport-agnostic messaging conventions & helpers for AmpyFin"
authors = [{ name = "AmpyFin" }]
requires-python = ">=3.8"
dependencies = ["protobuf>=4.0.0"]
readme = "README.md"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = ["jsonschema>=4.25.1", "check-jsonschema>=0.33.3", "pytest>=8.2.0"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
